Responsive design implemented, viewport tag added. Worked around static header option.

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Contact | Your Name</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact | Derek M</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
@@ -11,8 +12,8 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
-      <nav>
+      <a href="index.html" id="logo">Derek Miller</a>
+      <nav class="nav">
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
@@ -24,7 +25,7 @@
     <section class="main-section">
       <h1>Contact</h1>
 
-      <form id="contact-form">
+      <form class ="contact-form" id="contact-form">
         <ul>
           <li>
             <label for="name">Name</label>
@@ -39,7 +40,7 @@
             <textarea id="message" name="message" required="required"></textarea>
           </li>
         </ul>
-        <input type="submit">
+        <input class ="submit-button" type="submit">
       </form>
 
     </section>
