--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio | Your Name</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio | Derek M</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
@@ -11,8 +12,8 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
-      <nav>
+      <a href="index.html" id="logo">Derek M</a>
+      <nav class="nav">
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
